[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-streamdeck"
version = "0.1.0"
description = "Stream Deck integration for Home Assistant"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "StreamDeck",
    "pillow",
    "pyyaml",
    "aiohttp",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"homeassistant_streamdeck" = [
    "config.yaml",
    "Assets/*",
    "Assets/**",
    "Assets/Fonts/*",
    "Assets/Images/*",
]

[project.scripts]
hass-streamdeck = "homeassistant_streamdeck.cli:run"