[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-streamdeck"
version = "0.1.0"
description = "Stream Deck integration for Home Assistant"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "StreamDeck>=0.8.3",
    "Pillow>=8.0.0",
    "PyYAML>=5.3.1",
    "aiohttp>=3.7.3",
    "tabler-icons>=0.0.2",
    "cairosvg>=2.5.0",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"homeassistant_streamdeck" = [
    "Assets/*",
    "Assets/**",
    "Assets/Fonts/*",
    "Assets/Images/*",
]

[project.scripts]
hass-streamdeck = "homeassistant_streamdeck.cli:run"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
env = ["python-dotenv>=1.0.0"]